--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "server": "nodemon src/app.ts"
+    "server": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,6 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.26",
-    "nodemon": "^2.0.4",
-    "typescript": "^3.9.7"
+    "nodemon": "^2.0.4"
   }
 }
