--- a/nestBackend/package.json
+++ b/nestBackend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.6.0",
     "@nestjs/jwt": "^7.1.0",
@@ -34,6 +35,7 @@
     "apollo-server-express": "^2.17.0",
     "bcrypt": "^5.0.0",
     "class-validator": "^0.12.2",
+    "config": "^3.3.2",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
