--- a/react-app/package.json
+++ b/react-app/package.json
@@ -28,6 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:7000",
   "eslintConfig": {
     "extends": "react-app"
   },
