--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,14 +12,20 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.7.0",
+    "react-popupbox": "^2.0.8",
     "react-redux": "^7.2.1",
+    "react-redux-loading-bar": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "swiper": "^6.1.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
