--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,4 @@
 JWT_SECRET_KEY = 1234h9r8934tb32rqufgh
 JWT_LOGIN_TOKEN_TIME = 30m
+PORT = 7000
+MONGO_DB_URL = mongodb+srv://sheshunov00:h387rqy834grif@cluster0.qb2dz.azure.mongodb.net/react-delivary-app?retryWrites=true&w=majority
