--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
