--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@types/mongoose": "^5.7.36",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
