--- a/app/.env
+++ b/app/.env
@@ -2,5 +2,6 @@ JWT_SECRET_KEY = 1234h9r8934tb32rqufgh
 JWT_LOGIN_TOKEN_TIME = 30m
 PORT = 7000
 MONGO_DB_URL = mongodb+srv://sheshunov00:h387rqy834grif@cluster0.qb2dz.azure.mongodb.net/react-delivary-app?retryWrites=true&w=majority
+MONGO_DB_URL1 = mongodb+srv://sheshunov:75623822Dima@cluster0.7u0is.mongodb.net/ReactDelivary?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID = 948402626692-rkqs576721rqhooua55t52sbel4v1cpc.apps.googleusercontent.com
 GOOGLE_SECRET = lmDsnlEYat2bFf8nniI-K6Wn
