change logic of creating user

--- a/app/.env
+++ b/app/.env
@@ -5,3 +5,4 @@ MONGO_DB_URL = mongodb+srv://sheshunov00:h387rqy834grif@cluster0.qb2dz.azure.mon
 MONGO_DB_URL1 = mongodb+srv://sheshunov:75623822Dima@cluster0.7u0is.mongodb.net/ReactDelivary?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID = 948402626692-rkqs576721rqhooua55t52sbel4v1cpc.apps.googleusercontent.com
 GOOGLE_SECRET = lmDsnlEYat2bFf8nniI-K6Wn
+GOOGLE_API_KEY = AIzaSyDfmjFMp_zZiRsynnXo3pHxm5MmlzutkQY
