--- a/react-app/package.json
+++ b/react-app/package.json
@@ -15,6 +15,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
