--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "@types/mongoose": "^5.7.36",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
+    "class-transformer": "^0.3.2",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
