--- a/react-app/package.json
+++ b/react-app/package.json
@@ -17,7 +17,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
+    "react-date-picker": "^8.0.7",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
     "react-popupbox": "^2.0.8",
