--- a/react-app/package.json
+++ b/react-app/package.json
@@ -24,6 +24,7 @@
     "react-popupbox": "^2.0.8",
     "react-redux": "^7.2.1",
     "react-redux-loading-bar": "^5.0.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
