--- a/react-app/package.json
+++ b/react-app/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^12.12.53",
@@ -59,7 +60,6 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-config": "^5.0.2",
     "@types/react-router-dom": "^5.1.5",
-    "@types/react-select": "^3.0.26",
-    "@types/axios": "^0.14.0"
+    "@types/react-select": "^3.0.26"
   }
 }
