--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "geocodio-library-node": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mapbox-gl": "^2.1.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
+    "react-mapbox-gl": "^5.1.1",
     "react-popupbox": "^2.0.8",
     "react-redux": "^7.2.1",
     "react-redux-loading-bar": "^5.0.0",
@@ -54,6 +58,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.0",
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
