--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "geocodio-library-node": "^1.3.1",
+    "ipstack": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
     "mapbox-gl": "^2.1.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "public-ip": "^4.0.3",
     "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
